@@ -19,3 +19,5 @@ CATEGORIES_EXTENSION_DESC=Extension Desc
 CATEGORIES_EXTENSION_LABEL=Extension
 CATEGORIES_PARENT_DESC=Parent Desc
 CATEGORIES_PARENT_LABEL=Parent
+
+CATEGORIES_REBUILD_SUCCESS=Categories tree data successfully rebuilt.
